First fully working preview of new themeable logic

--- a/sass/base/helpers.sass
+++ b/sass/base/helpers.sass
@@ -94,48 +94,48 @@ $alignments: ('centered': 'center', 'justified': 'justify', 'left': 'left', 'rig
 .is-italic
   font-style: italic !important
 
-@each $name, $pair in $colors
-  $color: nth($pair, 1)
+@each $name in $colors-list
+  $color: v($name)
   .has-text-#{$name}
-    color: v($name, $color) !important
+    color: $color !important
   a.has-text-#{$name}
     &:hover,
     &:focus
-      color: vDarken($name, $color, 10%) !important
+      color: vDarken($name,  10%) !important
   .has-background-#{$name}
     background-color: $color !important
 
-@each $name, $shade in $shades
+@each $name in $shades
   .has-text-#{$name}
-    color: v($name, $shade) !important
+    color: v($name) !important
   .has-background-#{$name}
-    background-color: v($name, $shade) !important
+    background-color: v($name) !important
 
 .has-text-weight-light
-  font-weight: v(weight-light, $weight-light) !important
+  font-weight: v("weight-light") !important
 .has-text-weight-normal
-  font-weight: v(weight-normal, $weight-normal) !important
+  font-weight: v("weight-normal") !important
 .has-text-weight-medium
-  font-weight: v(weight-medium, $weight-medium) !important
+  font-weight: v("weight-medium") !important
 .has-text-weight-semibold
-  font-weight: v(weight-semibold, $weight-semibold) !important
+  font-weight: v("weight-semibold") !important
 .has-text-weight-bold
-  font-weight: v(weight-bold, $weight-bold) !important
+  font-weight: v("weight-bold") !important
 
 .is-family-primary
-  font-family: v(family-primary, $family-primary) !important
+  font-family: v("family-primary") !important
 
 .is-family-secondary
-  font-family: v(family-secondary, $family-secondary) !important
+  font-family: v("family-secondary") !important
 
 .is-family-sans-serif
-  font-family: v(family-sans-serif, $family-sans-serif) !important
+  font-family: v("family-sans-serif") !important
 
 .is-family-monospace
-  font-family: v(family-monospace, $family-monospace) !important
+  font-family: v("family-monospace") !important
 
 .is-family-code
-  font-family: v(family-code, $family-code) !important
+  font-family: v("family-code") !important
 
 // Visibility
 
