--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -1,25 +1,32 @@
-$breadcrumb-item-color: $link !default
-$breadcrumb-item-hover-color: $link-hover !default
-$breadcrumb-item-active-color: $text-strong !default
+$breadcrumb-item-color: v("link") !default
+$breadcrumb-item-hover-color: v("link-hover") !default
+$breadcrumb-item-active-color: v("text-strong") !default
 
 $breadcrumb-item-padding-vertical: 0 !default
 $breadcrumb-item-padding-horizontal: 0.75em !default
 
-$breadcrumb-item-separator-color: $border-hover !default
+$breadcrumb-item-separator-color: v("border-hover") !default
+
+@include vRegister(breadcrumb-item-color,$breadcrumb-item-color)
+@include vRegister(breadcrumb-item-padding-vertical,$breadcrumb-item-padding-vertical)
+@include vRegister(breadcrumb-item-padding-horizontal,$breadcrumb-item-padding-horizontal)
+@include vRegister(breadcrumb-item-hover-color,$breadcrumb-item-hover-color)
+@include vRegister(breadcrumb-item-active-color,$breadcrumb-item-active-color)
+@include vRegister(breadcrumb-item-separator-color,$breadcrumb-item-separator-color)
 
 .breadcrumb
   @extend %block
   @extend %unselectable
-  font-size: v(size-normal, $size-normal)
+  font-size: v("size-normal")
   white-space: nowrap
   a
     align-items: center
-    color: v(breadcrumb-item-color, $breadcrumb-item-color)
+    color: v("breadcrumb-item-color")
     display: flex
     justify-content: center
-    padding: v(breadcrumb-item-padding-vertical, $breadcrumb-item-padding-vertical) v(breadcrumb-item-padding-horizontal, $breadcrumb-item-padding-horizontal)
+    padding: v("breadcrumb-item-padding-vertical") v("breadcrumb-item-padding-horizontal")
     &:hover
-      color: v(breadcrumb-item-hover-color, $breadcrumb-item-hover-color)
+      color: v("breadcrumb-item-hover-color")
   li
     align-items: center
     display: flex
@@ -27,11 +34,11 @@ $breadcrumb-item-separator-color: $border-hover !default
       padding-left: 0
     &.is-active
       a
-        color: v(breadcrumb-item-active-color, $breadcrumb-item-active-color)
+        color: v("breadcrumb-item-active-color")
         cursor: default
         pointer-events: none
     & + li::before
-      color: v(breadcrumb-item-separator-color, $breadcrumb-item-separator-color)
+      color: v("breadcrumb-item-separator-color")
       content: "\0002f"
   ul,
   ol
@@ -55,11 +62,11 @@ $breadcrumb-item-separator-color: $border-hover !default
       justify-content: flex-end
   // Sizes
   &.is-small
-    font-size: v(size-small, $size-small)
+    font-size: v("size-small")
   &.is-medium
-    font-size: v(size-medium, $size-medium)
+    font-size: v("size-medium")
   &.is-large
-    font-size: v(size-large, $size-large)
+    font-size: v("size-large")
   // Styles
   &.has-arrow-separator
     li + li::before
