--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -1,21 +1,36 @@
 $dropdown-menu-min-width: 12rem !default
 
-$dropdown-content-background-color: $scheme-main !default
-$dropdown-content-arrow: $link !default
+$dropdown-content-background-color: v("scheme-main") !default
+$dropdown-content-arrow: v("link") !default
 $dropdown-content-offset: 4px !default
 $dropdown-content-padding-bottom: 0.5rem !default
 $dropdown-content-padding-top: 0.5rem !default
-$dropdown-content-radius: $radius !default
-$dropdown-content-shadow: 0 0.5em 1em -0.125em bulmaRgba($scheme-invert, 0.1), 0 0px 0 1px bulmaRgba($scheme-invert, 0.02) !default
+$dropdown-content-radius: v("radius") !default
+$dropdown-content-shadow: 0 0.5em 1em -0.125em vAlphaChange("scheme-invert", 0.1), 0 0px 0 1px vAlphaChange("scheme-invert", 0.02) !default
 $dropdown-content-z: 20 !default
 
-$dropdown-item-color: $text !default
-$dropdown-item-hover-color: $scheme-invert !default
-$dropdown-item-hover-background-color: $background !default
-$dropdown-item-active-color: $link-invert !default
-$dropdown-item-active-background-color: $link !default
+$dropdown-item-color: v("text") !default
+$dropdown-item-hover-color: v("scheme-invert") !default
+$dropdown-item-hover-background-color: v("background") !default
+$dropdown-item-active-color: v("link-invert") !default
+$dropdown-item-active-background-color: v("link") !default
 
-$dropdown-divider-background-color: $border-light !default
+$dropdown-divider-background-color: v("border-light") !default
+
+@include vRegister(dropdown-content-offset,$dropdown-content-offset)
+@include vRegister(dropdown-menu-min-width,$dropdown-menu-min-width)
+@include vRegister(dropdown-content-z,$dropdown-content-z)
+@include vRegister(dropdown-content-background-color,$dropdown-content-background-color)
+@include vRegister(dropdown-content-radius,$dropdown-content-radius)
+@include vRegister(dropdown-content-shadow,$dropdown-content-shadow)
+@include vRegister(dropdown-content-padding-bottom,$dropdown-content-padding-bottom)
+@include vRegister(dropdown-content-padding-top,$dropdown-content-padding-top)
+@include vRegister(dropdown-item-color,$dropdown-item-color)
+@include vRegister(dropdown-item-hover-background-color,$dropdown-item-hover-background-color)
+@include vRegister(dropdown-item-hover-color,$dropdown-item-hover-color)
+@include vRegister(dropdown-item-active-background-color,$dropdown-item-active-background-color)
+@include vRegister(dropdown-item-active-color,$dropdown-item-active-color)
+@include vRegister(dropdown-divider-background-color,$dropdown-divider-background-color)
 
 .dropdown
   display: inline-flex
@@ -32,28 +47,28 @@ $dropdown-divider-background-color: $border-light !default
   &.is-up
     .dropdown-menu
       bottom: 100%
-      padding-bottom: v(dropdown-content-offset, $dropdown-content-offset)
+      padding-bottom: v("dropdown-content-offset")
       padding-top: initial
       top: auto
 
 .dropdown-menu
   display: none
   left: 0
-  min-width: v(dropdown-menu-min-width, $dropdown-menu-min-width)
-  padding-top: v(dropdown-content-offset, $dropdown-content-offset)
+  min-width: v("dropdown-menu-min-width")
+  padding-top: v("dropdown-content-offset")
   position: absolute
   top: 100%
-  z-index: v(dropdown-content-z, $dropdown-content-z)
+  z-index: v("dropdown-content-z")
 
 .dropdown-content
-  background-color: v(dropdown-content-background-color, $dropdown-content-background-color)
-  border-radius: v(dropdown-content-radius, $dropdown-content-radius)
-  box-shadow: v(dropdown-content-shadow, $dropdown-content-shadow)
-  padding-bottom: v(dropdown-content-padding-bottom, $dropdown-content-padding-bottom)
-  padding-top: v(dropdown-content-padding-top, $dropdown-content-padding-top)
+  background-color: v("dropdown-content-background-color")
+  border-radius: v("dropdown-content-radius")
+  box-shadow: v("dropdown-content-shadow")
+  padding-bottom: v("dropdown-content-padding-bottom")
+  padding-top: v("dropdown-content-padding-top")
 
 .dropdown-item
-  color: v(dropdown-item-color, $dropdown-item-color)
+  color: v("dropdown-item-color")
   display: block
   font-size: 0.875rem
   line-height: 1.5
@@ -67,14 +82,14 @@ button.dropdown-item
   white-space: nowrap
   width: 100%
   &:hover
-    background-color: v(dropdown-item-hover-background-color, $dropdown-item-hover-background-color)
-    color: v(dropdown-item-hover-color, $dropdown-item-hover-color)
+    background-color: v("dropdown-item-hover-background-color")
+    color: v("dropdown-item-hover-color")
   &.is-active
-    background-color: v(dropdown-item-active-background-color, $dropdown-item-active-background-color)
-    color: v(dropdown-item-active-color, $dropdown-item-active-color)
+    background-color: v("dropdown-item-active-background-color")
+    color: v("dropdown-item-active-color")
 
 .dropdown-divider
-  background-color: v(dropdown-divider-background-color, $dropdown-divider-background-color)
+  background-color: v("dropdown-divider-background-color")
   border: none
   display: block
   height: 1px
