--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -3,19 +3,26 @@ $icon-dimensions-small: 1rem !default
 $icon-dimensions-medium: 2rem !default
 $icon-dimensions-large: 3rem !default
 
+@include vRegister(icon-dimensions, $icon-dimensions)
+@include vRegister(icon-dimensions-small, $icon-dimensions-small)
+@include vRegister(icon-dimensions-medium, $icon-dimensions-medium)
+@include vRegister(icon-dimensions-large, $icon-dimensions-large)
+
 .icon
   align-items: center
   display: inline-flex
   justify-content: center
-  height: v(icon-dimensions, $icon-dimensions)
-  width: v(icon-dimensions, $icon-dimensions)
+  height: v("icon-dimensions")
+  width: v("icon-dimensions")
   // Sizes
   &.is-small
-    height: v(icon-dimensions-small, $icon-dimensions-small)
-    width: v(icon-dimensions-small, $icon-dimensions-small)
+    height: v("icon-dimensions-small")
+    width: v("icon-dimensions-small")
+
   &.is-medium
-    height: v(icon-dimensions-medium, $icon-dimensions-medium)
-    width: v(icon-dimensions-medium, $icon-dimensions-medium)
+    height: v("icon-dimensions-medium")
+    width: v("icon-dimensions-medium")
+
   &.is-large
-    height: v(icon-dimensions-large, $icon-dimensions-large)
-    width: v(icon-dimensions-large, $icon-dimensions-large)
+    height: v("icon-dimensions-large")
+    width: v("icon-dimensions-large")
