--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -37,9 +37,9 @@
     left: calc(50% - 8px)
     position: absolute
     transform-origin: center
-    transition-duration: v(speed, $speed)
+    transition-duration: v("speed")
     transition-property: background-color, opacity, transform
-    transition-timing-function: v(easing, $easing)
+    transition-timing-function: v("easing")
     width: 16px
     &:nth-child(1)
       top: calc(50% - 6px)
@@ -170,9 +170,9 @@
   @extend %unselectable
   -moz-appearance: none
   -webkit-appearance: none
-  background-color: bulmaRgba($scheme-invert, 0.2)
+  background-color: vAlpha("scheme-invert", 0.2)
   border: none
-  border-radius: v(radius-rounded, $radius-rounded)
+  border-radius: v("radius-rounded")
   cursor: pointer
   pointer-events: auto
   display: inline-block
@@ -190,7 +190,7 @@
   width: 20px
   &::before,
   &::after
-    background-color: v(scheme-main, $scheme-main)
+    background-color: v("scheme-main")
     content: ""
     display: block
     left: 50%
@@ -206,9 +206,9 @@
     width: 2px
   &:hover,
   &:focus
-    background-color: bulmaRgba($scheme-invert, 0.3)
+    background-color: vAlpha("scheme-invert", 0.3)
   &:active
-    background-color: bulmaRgba($scheme-invert, 0.4)
+    background-color: vAlpha("scheme-invert", 0.4)
   // Sizes
   &.is-small
     height: 16px
@@ -237,8 +237,8 @@
 
 =loader
   animation: spinAround 500ms infinite linear
-  border: 2px solid v(grey-lighter, $grey-lighter)
-  border-radius: v(radius-rounded, $radius-rounded)
+  border: 2px solid v("grey-lighter")
+  border-radius: v("radius-rounded")
   border-right-color: transparent
   border-top-color: transparent
   content: ""
