--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -273,8 +273,8 @@
   font-size: 1.25em
   vertical-align: middle
 
-$notification-background-color: $background !default
-$notification-radius: $radius !default
+$notification-background-color: v("background") !default
+$notification-radius: v("radius") !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 
 .bd-notification
