--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -1,29 +1,29 @@
-$body-background-color: $scheme-main !default
+$body-background-color: v("scheme-main") !default
 $body-size: 16px !default
 $body-min-width: 300px !default
 $body-rendering: optimizeLegibility !default
-$body-family: $family-primary !default
+$body-family: v("family-primary") !default
 $body-overflow-x: hidden !default
 $body-overflow-y: scroll !default
 
-$body-color: $text !default
+$body-color: v("text") !default
 $body-font-size: 1em !default
-$body-weight: $weight-normal !default
+$body-weight: v("weight-normal") !default
 $body-line-height: 1.5 !default
 
-$code-family: $family-code !default
+$code-family: v("family-code") !default
 $code-padding: 0.25em 0.5em 0.25em !default
 $code-weight: normal !default
 $code-size: 0.875em !default
 
 $small-font-size: 0.875em !default
 
-$hr-background-color: $background !default
+$hr-background-color: v("background") !default
 $hr-height: 2px !default
 $hr-margin: 1.5rem 0 !default
 
-$strong-color: $text-strong !default
-$strong-weight: $weight-bold !default
+$strong-color: v("text-strong") !default
+$strong-weight: v("weight-bold") !default
 
 $pre-font-size: 0.875em !default
 $pre-padding: 1.25rem 1.5rem !default
