--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -1,11 +1,13 @@
 $level-item-spacing: ($block-spacing / 2) !default
 
+@include vRegister(level-item-spacing, $level-item-spacing)
+
 .level
   @extend %block
   align-items: center
   justify-content: space-between
   code
-    border-radius: v(radius, $radius)
+    border-radius: v("radius")
   img
     display: inline-block
     vertical-align: top
@@ -20,7 +22,7 @@ $level-item-spacing: ($block-spacing / 2) !default
     .level-item
       &:not(:last-child)
         margin-bottom: 0
-        margin-right: v(level-item-spacing, $level-item-spacing)
+        margin-right: v("level-item-spacing")
       &:not(.is-narrow)
         flex-grow: 1
   // Responsiveness
@@ -43,7 +45,7 @@ $level-item-spacing: ($block-spacing / 2) !default
   // Responsiveness
   +mobile
     &:not(:last-child)
-      margin-bottom: v(level-item-spacing, $level-item-spacing)
+      margin-bottom: v("level-item-spacing")
 
 .level-left,
 .level-right
@@ -57,7 +59,7 @@ $level-item-spacing: ($block-spacing / 2) !default
     // Responsiveness
     +tablet
       &:not(:last-child)
-        margin-right: v(level-item-spacing, $level-item-spacing)
+        margin-right: v("level-item-spacing")
 
 .level-left
   align-items: center
