--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -1,43 +1,66 @@
-$panel-margin: $block-spacing !default
-$panel-item-border: 1px solid $border-light !default
-$panel-radius: $radius-large !default
-$panel-shadow: 0 0.5em 1em -0.125em bulmaRgba($scheme-invert, 0.1), 0 0px 0 1px bulmaRgba($scheme-invert, 0.02) !default
+$panel-margin: v("block-spacing") !default
+$panel-item-border: 1px solid v("border-light") !default
+$panel-radius: v("radius-large") !default
+$panel-shadow: 0 0.5em 1em -0.125em vAlphaChange("scheme-invert", 0.1), 0 0px 0 1px vAlphaChange("scheme-invert", 0.02) !default
 
-$panel-heading-background-color: $border-light !default
-$panel-heading-color: $text-strong !default
+$panel-heading-background-color: v("border-light") !default
+$panel-heading-color: v("text-strong") !default
 $panel-heading-line-height: 1.25 !default
 $panel-heading-padding: 0.75em 1em !default
-$panel-heading-radius: $radius !default
+$panel-heading-radius: v("radius") !default
 $panel-heading-size: 1.25em !default
-$panel-heading-weight: $weight-bold !default
+$panel-heading-weight: v("weight-bold") !default
 
 $panel-tabs-font-size: 0.875em !default
-$panel-tab-border-bottom: 1px solid $border !default
-$panel-tab-active-border-bottom-color: $link-active-border !default
-$panel-tab-active-color: $link-active !default
+$panel-tab-border-bottom: 1px solid v("border") !default
+$panel-tab-active-border-bottom-color: v("link-active-border") !default
+$panel-tab-active-color: v("link-active") !default
 
-$panel-list-item-color: $text !default
-$panel-list-item-hover-color: $link !default
+$panel-list-item-color: v("text") !default
+$panel-list-item-hover-color: v("link") !default
 
-$panel-block-color: $text-strong !default
-$panel-block-hover-background-color: $background !default
-$panel-block-active-border-left-color: $link !default
-$panel-block-active-color: $link-active !default
-$panel-block-active-icon-color: $link !default
+$panel-block-color: v("text-strong") !default
+$panel-block-hover-background-color: v("background") !default
+$panel-block-active-border-left-color: v("link") !default
+$panel-block-active-color: v("link-active") !default
+$panel-block-active-icon-color: v("link") !default
 
-$panel-icon-color: $text-light !default
-$panel-colors: $colors !default
+$panel-icon-color: v("text-light") !default
+$panel-colors: $colors-list !default
+
+@include vRegister(panel-radius,$panel-radius)
+@include vRegister(panel-shadow,$panel-shadow)
+@include vRegister(panel-margin,$panel-margin)
+@include vRegister(panel-item-border,$panel-item-border)
+@include vRegister(panel-heading-background-color,$panel-heading-background-color)
+@include vRegister(panel-heading-color,$panel-heading-color)
+@include vRegister(panel-heading-size,$panel-heading-size)
+@include vRegister(panel-heading-weight,$panel-heading-weight)
+@include vRegister(panel-heading-line-height,$panel-heading-line-height)
+@include vRegister(panel-heading-padding,$panel-heading-padding)
+@include vRegister(panel-tabs-font-size,$panel-tabs-font-size)
+@include vRegister(panel-tab-border-bottom,$panel-tab-border-bottom)
+@include vRegister(panel-tab-active-border-bottom-color,$panel-tab-active-border-bottom-color)
+@include vRegister(panel-tab-active-color,$panel-tab-active-color)
+@include vRegister(panel-list-item-color,$panel-list-item-color)
+@include vRegister(panel-list-item-hover-color,$panel-list-item-hover-color)
+@include vRegister(panel-block-color,$panel-block-color)
+@include vRegister(panel-block-active-border-left-color,$panel-block-active-border-left-color)
+@include vRegister(panel-block-active-color,$panel-block-active-color)
+@include vRegister(panel-block-active-icon-color,$panel-block-active-icon-color)
+@include vRegister(panel-block-hover-background-color,$panel-block-hover-background-color)
+@include vRegister(panel-icon-color,$panel-icon-color)
 
 .panel
-  border-radius: v(panel-radius, $panel-radius)
-  box-shadow: v(panel-shadow, $panel-shadow)
-  font-size: v(size-normal, $size-normal)
+  border-radius: v("panel-radius")
+  box-shadow: v("panel-shadow")
+  font-size: v("size-normal")
   &:not(:last-child)
-    margin-bottom: v(panel-margin, $panel-margin)
+    margin-bottom: v("panel-margin")
   // Colors
-  @each $name, $components in $panel-colors
-    $color: nth($components, 1)
-    $color-invert: nth($components, 2)
+  @each $name in $panel-colors
+    $color: v($name)
+    $color-invert: v($name+"-invert")
     &.is-#{$name}
       .panel-heading
         background-color: $color
@@ -50,40 +73,40 @@ $panel-colors: $colors !default
 .panel-tabs,
 .panel-block
   &:not(:last-child)
-    border-bottom: v(panel-item-border, $panel-item-border)
+    border-bottom: v("panel-item-border")
 
 .panel-heading
-  background-color: v(panel-heading-background-color, $panel-heading-background-color)
-  border-radius: v(panel-radius, $panel-radius) $panel-radius 0 0
-  color: v(panel-heading-color, $panel-heading-color)
-  font-size: v(panel-heading-size, $panel-heading-size)
-  font-weight: v(panel-heading-weight, $panel-heading-weight)
-  line-height: v(panel-heading-line-height, $panel-heading-line-height)
-  padding: v(panel-heading-padding, $panel-heading-padding)
+  background-color: v("panel-heading-background-color")
+  border-radius: v("panel-radius") v("panel-radius") 0 0
+  color: v("panel-heading-color")
+  font-size: v("panel-heading-size")
+  font-weight: v("panel-heading-weight")
+  line-height: v("panel-heading-line-height")
+  padding: v("panel-heading-padding")
 
 .panel-tabs
   align-items: flex-end
   display: flex
-  font-size: v(panel-tabs-font-size, $panel-tabs-font-size)
+  font-size: v("panel-tabs-font-size")
   justify-content: center
   a
-    border-bottom: v(panel-tab-border-bottom, $panel-tab-border-bottom)
+    border-bottom: v("panel-tab-border-bottom")
     margin-bottom: -1px
     padding: 0.5em
     // Modifiers
     &.is-active
-      border-bottom-color: v(panel-tab-active-border-bottom-color, $panel-tab-active-border-bottom-color)
-      color: v(panel-tab-active-color, $panel-tab-active-color)
+      border-bottom-color: v("panel-tab-active-border-bottom-color")
+      color: v("panel-tab-active-color")
 
 .panel-list
   a
-    color: v(panel-list-item-color, $panel-list-item-color)
+    color: v("panel-list-item-color")
     &:hover
-      color: v(panel-list-item-hover-color, $panel-list-item-hover-color)
+      color: v("panel-list-item-hover-color")
 
 .panel-block
   align-items: center
-  color: v(panel-block-color, $panel-block-color)
+  color: v("panel-block-color")
   display: flex
   justify-content: flex-start
   padding: 0.5em 0.75em
@@ -96,23 +119,23 @@ $panel-colors: $colors !default
   &.is-wrapped
     flex-wrap: wrap
   &.is-active
-    border-left-color: v(panel-block-active-border-left-color, $panel-block-active-border-left-color)
-    color: v(panel-block-active-color, $panel-block-active-color)
+    border-left-color: v("panel-block-active-border-left-color")
+    color: v("panel-block-active-color")
     .panel-icon
-      color: v(panel-block-active-icon-color, $panel-block-active-icon-color)
+      color: v("panel-block-active-icon-color")
   &:last-child
-    border-bottom-left-radius: v(panel-radius, $panel-radius)
-    border-bottom-right-radius: v(panel-radius, $panel-radius)
+    border-bottom-left-radius: v("panel-radius")
+    border-bottom-right-radius: v("panel-radius")
 
 a.panel-block,
 label.panel-block
   cursor: pointer
   &:hover
-    background-color: v(panel-block-hover-background-color, $panel-block-hover-background-color)
+    background-color: v("panel-block-hover-background-color")
 
 .panel-icon
   +fa(14px, 1em)
-  color: v(panel-icon-color, $panel-icon-color)
+  color: v("panel-icon-color")
   margin-right: 0.75em
   .fa
     font-size: inherit
