--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -1,30 +1,55 @@
-$tabs-border-bottom-color: $border !default
+$tabs-border-bottom-color: v("border") !default
 $tabs-border-bottom-style: solid !default
 $tabs-border-bottom-width: 1px !default
-$tabs-link-color: $text !default
-$tabs-link-hover-border-bottom-color: $text-strong !default
-$tabs-link-hover-color: $text-strong !default
-$tabs-link-active-border-bottom-color: $link !default
-$tabs-link-active-color: $link !default
+$tabs-link-color: v("text") !default
+$tabs-link-hover-border-bottom-color: v("text-strong") !default
+$tabs-link-hover-color: v("text-strong") !default
+$tabs-link-active-border-bottom-color: v("link") !default
+$tabs-link-active-color: v("link") !default
 $tabs-link-padding: 0.5em 1em !default
 
-$tabs-boxed-link-radius: $radius !default
-$tabs-boxed-link-hover-background-color: $background !default
-$tabs-boxed-link-hover-border-bottom-color: $border !default
+$tabs-boxed-link-radius: v("radius") !default
+$tabs-boxed-link-hover-background-color: v("background") !default
+$tabs-boxed-link-hover-border-bottom-color: v("border") !default
 
-$tabs-boxed-link-active-background-color: $scheme-main !default
-$tabs-boxed-link-active-border-color: $border !default
+$tabs-boxed-link-active-background-color: v("scheme-main") !default
+$tabs-boxed-link-active-border-color: v("border") !default
 $tabs-boxed-link-active-border-bottom-color: transparent !default
 
-$tabs-toggle-link-border-color: $border !default
+$tabs-toggle-link-border-color: v("border") !default
 $tabs-toggle-link-border-style: solid !default
 $tabs-toggle-link-border-width: 1px !default
-$tabs-toggle-link-hover-background-color: $background !default
-$tabs-toggle-link-hover-border-color: $border-hover !default
-$tabs-toggle-link-radius: $radius !default
-$tabs-toggle-link-active-background-color: $link !default
-$tabs-toggle-link-active-border-color: $link !default
-$tabs-toggle-link-active-color: $link-invert !default
+$tabs-toggle-link-hover-background-color: v("background") !default
+$tabs-toggle-link-hover-border-color: v("border-hover") !default
+$tabs-toggle-link-radius: v("radius") !default
+$tabs-toggle-link-active-background-color: v("link") !default
+$tabs-toggle-link-active-border-color: v("link") !default
+$tabs-toggle-link-active-color: v("link-invert") !default
+
+@include vRegister(tabs-border-bottom-color,$tabs-border-bottom-color)
+@include vRegister(tabs-border-bottom-style,$tabs-border-bottom-style)
+@include vRegister(tabs-border-bottom-width,$tabs-border-bottom-width)
+@include vRegister(tabs-link-color,$tabs-link-color)
+@include vRegister(tabs-link-padding,$tabs-link-padding)
+@include vRegister(tabs-link-hover-border-bottom-color,$tabs-link-hover-border-bottom-color)
+@include vRegister(tabs-link-hover-color,$tabs-link-hover-color)
+@include vRegister(tabs-link-active-border-bottom-color,$tabs-link-active-border-bottom-color)
+@include vRegister(tabs-link-active-color,$tabs-link-active-color)
+@include vRegister(tabs-boxed-link-radius,$tabs-boxed-link-radius)
+@include vRegister(tabs-boxed-link-hover-background-color,$tabs-boxed-link-hover-background-color)
+@include vRegister(tabs-boxed-link-hover-border-bottom-color,$tabs-boxed-link-hover-border-bottom-color)
+@include vRegister(tabs-boxed-link-active-background-color,$tabs-boxed-link-active-background-color)
+@include vRegister(tabs-boxed-link-active-border-color,$tabs-boxed-link-active-border-color)
+@include vRegister(tabs-boxed-link-active-border-bottom-color,$tabs-boxed-link-active-border-bottom-color)
+@include vRegister(tabs-toggle-link-border-color,$tabs-toggle-link-border-color)
+@include vRegister(tabs-toggle-link-border-style,$tabs-toggle-link-border-style)
+@include vRegister(tabs-toggle-link-border-width,$tabs-toggle-link-border-width)
+@include vRegister(tabs-toggle-link-hover-background-color,$tabs-toggle-link-hover-background-color)
+@include vRegister(tabs-toggle-link-hover-border-color,$tabs-toggle-link-hover-border-color)
+@include vRegister(tabs-toggle-link-radius,$tabs-toggle-link-radius)
+@include vRegister(tabs-toggle-link-active-background-color,$tabs-toggle-link-active-background-color)
+@include vRegister(tabs-toggle-link-active-border-color,$tabs-toggle-link-active-border-color)
+@include vRegister(tabs-toggle-link-active-color,$tabs-toggle-link-active-color)
 
 .tabs
   @extend %block
@@ -32,36 +57,36 @@ $tabs-toggle-link-active-color: $link-invert !default
   @extend %unselectable
   align-items: stretch
   display: flex
-  font-size: v(size-normal, $size-normal)
+  font-size: v("size-normal")
   justify-content: space-between
   overflow: hidden
   overflow-x: auto
   white-space: nowrap
   a
     align-items: center
-    border-bottom-color: v(tabs-border-bottom-color, $tabs-border-bottom-color)
-    border-bottom-style: v(tabs-border-bottom-style, $tabs-border-bottom-style)
-    border-bottom-width: v(tabs-border-bottom-width, $tabs-border-bottom-width)
-    color: v(tabs-link-color, $tabs-link-color)
+    border-bottom-color: v("tabs-border-bottom-color")
+    border-bottom-style: v("tabs-border-bottom-style")
+    border-bottom-width: v("tabs-border-bottom-width")
+    color: v("tabs-link-color")
     display: flex
     justify-content: center
-    margin-bottom: calc(-1 * #{v(tabs-border-bottom-width, $tabs-border-bottom-width)})
-    padding: v(tabs-link-padding, $tabs-link-padding)
+    margin-bottom: calc(-1 * #{v("tabs-border-bottom-width")})
+    padding: v("tabs-link-padding")
     vertical-align: top
     &:hover
-      border-bottom-color: v(tabs-link-hover-border-bottom-color, $tabs-link-hover-border-bottom-color)
-      color: v(tabs-link-hover-color, $tabs-link-hover-color)
+      border-bottom-color: v("tabs-link-hover-border-bottom-color")
+      color: v("tabs-link-hover-color")
   li
     display: block
     &.is-active
       a
-        border-bottom-color: v(tabs-link-active-border-bottom-color, $tabs-link-active-border-bottom-color)
-        color: v(tabs-link-active-color, $tabs-link-active-color)
+        border-bottom-color: v("tabs-link-active-border-bottom-color")
+        color: v("tabs-link-active-color")
   ul
     align-items: center
-    border-bottom-color: v(tabs-border-bottom-color, $tabs-border-bottom-color)
-    border-bottom-style: v(tabs-border-bottom-style, $tabs-border-bottom-style)
-    border-bottom-width: v(tabs-border-bottom-width, $tabs-border-bottom-width)
+    border-bottom-color: v("tabs-border-bottom-color")
+    border-bottom-style: v("tabs-border-bottom-style")
+    border-bottom-width: v("tabs-border-bottom-width")
     display: flex
     flex-grow: 1
     flex-shrink: 0
@@ -92,62 +117,62 @@ $tabs-toggle-link-active-color: $link-invert !default
   &.is-boxed
     a
       border: 1px solid transparent
-      border-radius: v(tabs-boxed-link-radius, $tabs-boxed-link-radius) $tabs-boxed-link-radius 0 0
+      border-radius: v("tabs-boxed-link-radius") v("tabs-boxed-link-radius") 0 0
       &:hover
-        background-color: v(tabs-boxed-link-hover-background-color, $tabs-boxed-link-hover-background-color)
-        border-bottom-color: v(tabs-boxed-link-hover-border-bottom-color, $tabs-boxed-link-hover-border-bottom-color)
+        background-color: v("tabs-boxed-link-hover-background-color")
+        border-bottom-color: v("tabs-boxed-link-hover-border-bottom-color")
     li
       &.is-active
         a
-          background-color: v(tabs-boxed-link-active-background-color, $tabs-boxed-link-active-background-color)
-          border-color: v(tabs-boxed-link-active-border-color, $tabs-boxed-link-active-border-color)
-          border-bottom-color: v(tabs-boxed-link-active-border-bottom-color, $tabs-boxed-link-active-border-bottom-color) !important
+          background-color: v("tabs-boxed-link-active-background-color")
+          border-color: v("tabs-boxed-link-active-border-color")
+          border-bottom-color: v("tabs-boxed-link-active-border-bottom-color") !important
   &.is-fullwidth
     li
       flex-grow: 1
       flex-shrink: 0
   &.is-toggle
     a
-      border-color: v(tabs-toggle-link-border-color, $tabs-toggle-link-border-color)
-      border-style: v(tabs-toggle-link-border-style, $tabs-toggle-link-border-style)
-      border-width: v(tabs-toggle-link-border-width, $tabs-toggle-link-border-width)
+      border-color: v("tabs-toggle-link-border-color")
+      border-style: v("tabs-toggle-link-border-style")
+      border-width: v("tabs-toggle-link-border-width")
       margin-bottom: 0
       position: relative
       &:hover
-        background-color: v(tabs-toggle-link-hover-background-color, $tabs-toggle-link-hover-background-color)
-        border-color: v(tabs-toggle-link-hover-border-color, $tabs-toggle-link-hover-border-color)
+        background-color: v("tabs-toggle-link-hover-background-color")
+        border-color: v("tabs-toggle-link-hover-border-color")
         z-index: 2
     li
       & + li
-        margin-left: calc(-1 * #{v(tabs-toggle-link-border-width, $tabs-toggle-link-border-width)})
+        margin-left: calc(-1 * #{v("tabs-toggle-link-border-width")})
       &:first-child a
-        border-top-left-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
-        border-bottom-left-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
+        border-top-left-radius: v("tabs-toggle-link-radius")
+        border-bottom-left-radius: v("tabs-toggle-link-radius")
       &:last-child a
-        border-bottom-right-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
-        border-top-right-radius: v(tabs-toggle-link-radius, $tabs-toggle-link-radius)
+        border-bottom-right-radius: v("tabs-toggle-link-radius")
+        border-top-right-radius: v("tabs-toggle-link-radius")
       &.is-active
         a
-          background-color: v(tabs-toggle-link-active-background-color, $tabs-toggle-link-active-background-color)
-          border-color: v(tabs-toggle-link-active-border-color, $tabs-toggle-link-active-border-color)
-          color: v(tabs-toggle-link-active-color, $tabs-toggle-link-active-color)
+          background-color: v("tabs-toggle-link-active-background-color")
+          border-color: v("tabs-toggle-link-active-border-color")
+          color: v("tabs-toggle-link-active-color")
           z-index: 1
     ul
       border-bottom: none
     &.is-toggle-rounded
       li
         &:first-child a
-          border-bottom-left-radius: v(radius-rounded, $radius-rounded)
-          border-top-left-radius: v(radius-rounded, $radius-rounded)
+          border-bottom-left-radius: v("radius-rounded")
+          border-top-left-radius: v("radius-rounded")
           padding-left: 1.25em
         &:last-child a
-          border-bottom-right-radius: v(radius-rounded, $radius-rounded)
-          border-top-right-radius: v(radius-rounded, $radius-rounded)
+          border-bottom-right-radius: v("radius-rounded")
+          border-top-right-radius: v("radius-rounded")
           padding-right: 1.25em
   // Sizes
   &.is-small
-    font-size: v(size-small, $size-small)
+    font-size: v("size-small")
   &.is-medium
-    font-size: v(size-medium, $size-medium)
+    font-size: v("size-medium")
   &.is-large
-    font-size: v(size-large, $size-large)
+    font-size: v("size-large")
