--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,106 +1,211 @@
-$primary: $turquoise !default
+$primary: v("turquoise") !default
 
-$info: $cyan !default
-$success: $green !default
-$warning: $yellow !default
-$danger: $red !default
+@include vRegister(primary, $primary)
 
-$light: $white-ter !default
-$dark: $grey-darker !default
+$info: v("cyan") !default
+$success: v("green") !default
+$warning: v("yellow") !default
+$danger: v("red") !default
+
+@include vRegister(info, $info)
+@include vRegister(success, $success)
+@include vRegister(warning, $warning)
+@include vRegister(danger, $danger)
+
+$light: v("white-ter") !default
+$dark: v("grey-darker") !default
+
+
+@include vRegister("light", $light)
+@include vRegister("dark", $dark)
 
 // Invert colors
 
-$orange-invert: findColorInvert($orange) !default
-$yellow-invert: findColorInvert($yellow) !default
-$green-invert: findColorInvert($green) !default
-$turquoise-invert: findColorInvert($turquoise) !default
-$cyan-invert: findColorInvert($cyan) !default
-$blue-invert: findColorInvert($blue) !default
-$purple-invert: findColorInvert($purple) !default
-$red-invert: findColorInvert($red) !default
+$orange-invert: findColorInvert("orange") !default
+$yellow-invert: findColorInvert("yellow") !default
+$green-invert: findColorInvert("green") !default
+$turquoise-invert: findColorInvert("turquoise") !default
+$cyan-invert: findColorInvert("cyan") !default
+$blue-invert: findColorInvert("blue") !default
+$purple-invert: findColorInvert("purple") !default
+$red-invert: findColorInvert("red") !default
 
-$primary-invert: findColorInvert($primary) !default
-$primary-light: findLightColor($primary) !default
-$primary-dark: findDarkColor($primary) !default
-$info-invert: findColorInvert($info) !default
-$info-light: findLightColor($info) !default
-$info-dark: findDarkColor($info) !default
-$success-invert: findColorInvert($success) !default
-$success-light: findLightColor($success) !default
-$success-dark: findDarkColor($success) !default
-$warning-invert: findColorInvert($warning) !default
-$warning-light: findLightColor($warning) !default
-$warning-dark: findDarkColor($warning) !default
-$danger-invert: findColorInvert($danger) !default
-$danger-light: findLightColor($danger) !default
-$danger-dark: findDarkColor($danger) !default
-$light-invert: findColorInvert($light) !default
-$dark-invert: findColorInvert($dark) !default
+@include vRegister("orange-invert", $orange-invert)
+@include vRegister("yellow-invert", $yellow-invert)
+@include vRegister("green-invert", $green-invert)
+@include vRegister("turquoise-invert", $turquoise-invert)
+@include vRegister("cyan-invert", $cyan-invert)
+@include vRegister("blue-invert", $blue-invert)
+@include vRegister("purple-invert", $purple-invert)
+@include vRegister("red-invert", $red-invert)
+
+$primary-invert: findColorInvert("primary") !default
+$primary-light: findLightColor("primary") !default
+$primary-dark: findDarkColor("primary") !default
+$info-invert: findColorInvert("info") !default
+$info-light: findLightColor("info") !default
+$info-dark: findDarkColor("info") !default
+$success-invert: findColorInvert("success") !default
+$success-light: findLightColor("success") !default
+$success-dark: findDarkColor("success") !default
+$warning-invert: findColorInvert("warning") !default
+$warning-light: findLightColor("warning") !default
+$warning-dark: findDarkColor("warning") !default
+$danger-invert: findColorInvert("danger") !default
+$danger-light: findLightColor("danger") !default
+$danger-dark: findDarkColor("danger") !default
+$light-invert: findColorInvert("light") !default
+$dark-invert: findColorInvert("dark") !default
+
+
+@include vRegister(white-invert, $black)
+@include vRegister(black-invert, $white)
+
+@include vRegister(primary-invert, $primary-invert)
+@include vRegister(primary-light, $primary-light)
+@include vRegister(primary-dark, $primary-dark)
+
+@include vRegister(info-invert, $info-invert)
+@include vRegister(info-light, $info-light)
+@include vRegister(info-dark, $info-dark)
+
+@include vRegister(success-invert, $success-invert)
+@include vRegister(success-light, $success-light)
+@include vRegister(success-dark, $success-dark)
+
+@include vRegister(warning-invert, $warning-invert)
+@include vRegister(warning-light, $warning-light)
+@include vRegister(warning-dark, $warning-dark)
+
+@include vRegister(danger-invert, $danger-invert)
+@include vRegister(danger-light, $danger-light)
+@include vRegister(danger-dark, $danger-dark)
+
+@include vRegister(light-invert, $light-invert)
+@include vRegister(dark-invert, $dark-invert)
 
 // General colors
 
-$scheme-main: $white !default
-$scheme-main-bis: $white-bis !default
-$scheme-main-ter: $white-ter !default
-$scheme-invert: $black !default
-$scheme-invert-bis: $black-bis !default
-$scheme-invert-ter: $black-ter !default
+$scheme-main: v("white") !default
+$scheme-main-bis: v("white-bis") !default
+$scheme-main-ter: v("white-ter") !default
+$scheme-invert: v("black") !default
+$scheme-invert-bis: v("black-bis") !default
+$scheme-invert-ter: v("black-ter") !default
 
-$background: $white-ter !default
 
-$border: $grey-lighter !default
-$border-hover: $grey-light !default
-$border-light: $grey-lightest !default
-$border-light-hover: $grey-light !default
+@include vRegister(scheme-main, $scheme-main)
+@include vRegister(scheme-main-bis, $scheme-main-bis)
+@include vRegister(scheme-main-ter, $scheme-main-ter)
+@include vRegister(scheme-invert, $scheme-invert)
+@include vRegister(scheme-invert-bis, $scheme-invert-bis)
+@include vRegister(scheme-invert-ter, $scheme-invert-ter)
+
+$background: v("white-ter") !default
+
+@include vRegister("background", $background)
+
+$border: v("grey-lighter") !default
+$border-hover: v("grey-light") !default
+$border-light: v("grey-lightest") !default
+$border-light-hover: v("grey-light") !default
+
+@include vRegister("border", $border)
+@include vRegister(border-hover, $border-hover)
+@include vRegister(border-light, $border-light)
+@include vRegister(border-light-hover, $border-light-hover)
+
 
 // Text colors
 
-$text: $grey-dark !default
-$text-invert: findColorInvert($text) !default
-$text-light: $grey !default
-$text-strong: $grey-darker !default
+$text: v("grey-dark") !default
+@include vRegister("text", $text)
+
+$text-invert: findColorInvert("text") !default
+$text-light: v("grey") !default
+$text-strong: v("grey-darker") !default
+
+@include vRegister(text-invert, $text-invert)
+@include vRegister(text-light, $text-light)
+@include vRegister(text-strong, $text-strong)
+
 
 // Code colors
 
-$code: $red !default
-$code-background: $background !default
+$code: v("red") !default
+$code-background: v("background") !default
 
-$pre: $text !default
-$pre-background: $background !default
+$pre: v("text") !default
+$pre-background: v("background") !default
 
 // Link colors
 
-$link: $blue !default
-$link-invert: findColorInvert($link) !default
-$link-light: findLightColor($link) !default
-$link-dark: findDarkColor($link) !default
-$link-visited: $purple !default
+$link: v("blue") !default
 
-$link-hover: $grey-darker !default
-$link-hover-border: $grey-light !default
+@include vRegister(link, $link)
 
-$link-focus: $grey-darker !default
-$link-focus-border: $blue !default
+$link-invert: findColorInvert("link") !default
+$link-light: findLightColor("link") !default
+$link-dark: findDarkColor("link") !default
+$link-visited: v("purple") !default
 
-$link-active: $grey-darker !default
-$link-active-border: $grey-dark !default
+@include vRegister(link-invert, $link-invert)
+@include vRegister(link-light, $link-light)
+@include vRegister(link-dark, $link-dark)
+@include vRegister(link-visited, $link-visited)
+
+$link-hover: v("grey-darker") !default
+$link-hover-border: v("grey-light") !default
+
+$link-focus: v("grey-darker") !default
+$link-focus-border: v("blue") !default
+
+$link-active: v("grey-darker") !default
+$link-active-border: v("grey-dark") !default
+
+@include vRegister(link-hover, $link-hover)
+@include vRegister(link-hover-border, $link-hover-border)
+@include vRegister(link-focus, $link-focus)
+@include vRegister(link-focus-border, $link-focus-border)
+@include vRegister(link-active, $link-active)
+@include vRegister(link-active-border, $link-active-border)
+
 
 // Typography
 
-$family-primary: $family-sans-serif !default
-$family-secondary: $family-sans-serif !default
-$family-code: $family-monospace !default
+$family-primary: v("family-sans-serif") !default
+$family-secondary: v("family-sans-serif") !default
+$family-code: v("family-monospace") !default
 
-$size-small: $size-7 !default
-$size-normal: $size-6 !default
-$size-medium: $size-5 !default
-$size-large: $size-4 !default
+@include vRegister(family-primary, $family-primary)
+@include vRegister(family-secondary, $family-secondary)
+@include vRegister(family-code, $family-code)
+
+$size-small: v("size-7") !default
+$size-normal: v("size-6") !default
+$size-medium: v("size-5") !default
+$size-large: v("size-4") !default
+
+@include vRegister(size-small, $size-small)
+@include vRegister(size-normal, $size-normal)
+@include vRegister(size-medium, $size-medium)
+@include vRegister(size-large, $size-large)
 
 // Lists and maps
 $custom-colors: null !default
+$custom-colors-list: null !default
+
 $custom-shades: null !default
 
 $colors: mergeColorMaps(("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert, $primary-light, $primary-dark), "link": ($link, $link-invert, $link-light, $link-dark), "info": ($info, $info-invert, $info-light, $info-dark), "success": ($success, $success-invert, $success-light, $success-dark), "warning": ($warning, $warning-invert, $warning-light, $warning-dark), "danger": ($danger, $danger-invert, $danger-light, $danger-dark)), $custom-colors) !default
-$shades: mergeColorMaps(("black-bis": $black-bis, "black-ter": $black-ter, "grey-darker": $grey-darker, "grey-dark": $grey-dark, "grey": $grey, "grey-light": $grey-light, "grey-lighter": $grey-lighter, "white-ter": $white-ter, "white-bis": $white-bis), $custom-shades) !default
 
-$sizes: v(size-1, $size-1) v(size-2, $size-2) v(size-3, $size-3) v(size-4, $size-4) v(size-5, $size-5) v(size-6, $size-6) v(size-7, $size-7) !default
+$colors-list: ("white", "black", "light", "dark", "primary", "link", "info", "success", "warning", "danger") !default
+
+@if $custom-colors-list
+  $colors-list: append($colors, $custom-colors-list)
+
+$shades: ("black-bis", "black-ter", "grey-darker", "grey-dark", "grey", "grey-light", "grey-lighter", "white-ter", "white-bis") !default
+@if $custom-shades
+  $shades: append($shades, $custom-shades)
+
+$sizes: v("size-1") v("size-2") v("size-3") v("size-4") v("size-5") v("size-6") v("size-7") !default
