--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -1,34 +1,62 @@
 // Colors
 
-$black:        hsl(0, 0%, 4%) !default
-$black-bis:    hsl(0, 0%, 7%) !default
-$black-ter:    hsl(0, 0%, 14%) !default
+$black: hsl(0, 0%, 4%) !default
+$black-bis: hsl(0, 0%, 7%) !default
+$black-ter: hsl(0, 0%, 14%) !default
 
-$grey-darker:  hsl(0, 0%, 21%) !default
-$grey-dark:    hsl(0, 0%, 29%) !default
-$grey:         hsl(0, 0%, 48%) !default
-$grey-light:   hsl(0, 0%, 71%) !default
+@include vRegister("black", $black)
+@include vRegister("black-bis", $black-bis)
+@include vRegister("black-ter", $black-ter)
+
+$grey-darker: hsl(0, 0%, 21%) !default
+$grey-dark: hsl(0, 0%, 29%) !default
+$grey: hsl(0, 0%, 48%) !default
+$grey-light: hsl(0, 0%, 71%) !default
 $grey-lighter: hsl(0, 0%, 86%) !default
 $grey-lightest: hsl(0, 0%, 93%) !default
 
-$white-ter:    hsl(0, 0%, 96%) !default
-$white-bis:    hsl(0, 0%, 98%) !default
-$white:        hsl(0, 0%, 100%) !default
+@include vRegister("grey-lighter", $grey-lighter)
+@include vRegister("grey-light", $grey-light)
+@include vRegister("grey-lightest", $grey-lightest)
+@include vRegister("grey-dark", $grey-dark)
+@include vRegister("grey", $grey)
+@include vRegister("grey-darker", $grey-darker)
 
-$orange:       hsl(14,  100%, 53%) !default
-$yellow:       hsl(48,  100%, 67%) !default
-$green:        hsl(141, 53%,  53%) !default
-$turquoise:    hsl(171, 100%, 41%) !default
-$cyan:         hsl(204, 71%,  53%) !default
-$blue:         hsl(217, 71%,  53%) !default
-$purple:       hsl(271, 100%, 71%) !default
-$red:          hsl(348, 86%, 61%) !default
+$white-ter: hsl(0, 0%, 96%) !default
+$white-bis: hsl(0, 0%, 98%) !default
+$white: hsl(0, 0%, 100%) !default
+
+@include vRegister("white-ter", $white-ter)
+@include vRegister("white", $white)
+@include vRegister("white-bis", $white-bis)
+
+$orange: hsl(14, 100%, 53%) !default
+$yellow: hsl(48, 100%, 67%) !default
+$green: hsl(141, 53%, 53%) !default
+$turquoise: hsl(171, 100%, 41%) !default
+$cyan: hsl(204, 71%, 53%) !default
+$blue: hsl(217, 71%, 53%) !default
+$purple: hsl(271, 100%, 71%) !default
+$red: hsl(348, 86%, 61%) !default
+
+@include vRegister("orange", $orange)
+@include vRegister("yellow", $yellow)
+@include vRegister("green", $green)
+@include vRegister("turquoise", $turquoise)
+@include vRegister("cyan", $cyan)
+@include vRegister("blue", $blue)
+@include vRegister("purple", $purple)
+@include vRegister("red", $red)
 
 // Typography
 
 $family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default
 $family-monospace: monospace !default
 $render-mode: optimizeLegibility !default
+
+@include vRegister(family-sans-serif, $family-sans-serif)
+@include vRegister(family-monospace, $family-monospace)
+@include vRegister(render-mode, $render-mode)
 
 $size-1: 3rem !default
 $size-2: 2.5rem !default
@@ -38,18 +66,35 @@ $size-5: 1.25rem !default
 $size-6: 1rem !default
 $size-7: 0.75rem !default
 
+@include vRegister(size-1, $size-1)
+@include vRegister(size-2, $size-2)
+@include vRegister(size-3, $size-3)
+@include vRegister(size-4, $size-4)
+@include vRegister(size-5, $size-5)
+@include vRegister(size-6, $size-6)
+@include vRegister(size-7, $size-7)
+
+
 $weight-light: 300 !default
 $weight-normal: 400 !default
 $weight-medium: 500 !default
 $weight-semibold: 600 !default
 $weight-bold: 700 !default
 
+@include vRegister(weight-light, $weight-light)
+@include vRegister(weight-normal, $weight-normal)
+@include vRegister(weight-medium, $weight-medium)
+@include vRegister(weight-semibold, $weight-semibold)
+@include vRegister(weight-bold, $weight-bold)
+
 // Spacing
 
 $block-spacing: 1.5rem !default
 
-// Responsiveness
+@include vRegister(block-spacing, $block-spacing)
 
+// Responsiveness
+// Calc and variables for media queries are supported only since 2018 so don't use variables yet
 // The container horizontal gap, which acts as the offset for breakpoints
 $gap: 32px !default
 // 960, 1152, and 1344 have been chosen because they are divisible by both 12 and 16
@@ -58,10 +103,9 @@ $tablet: 769px !default
 $desktop: 960px + (2 * $gap) !default
 // 1152px container + 4rem
 $widescreen: 1152px + (2 * $gap) !default
-$widescreen-enabled: true !default
 // 1344px container + 4rem
 $fullhd: 1344px + (2 * $gap) !default
-$fullhd-enabled: true !default
+
 
 // Miscellaneous
 
@@ -72,6 +116,14 @@ $radius-large: 6px !default
 $radius-rounded: 290486px !default
 $speed: 86ms !default
 
-// Flags
+@include vRegister(easing, $easing)
+@include vRegister(radius-small, $radius-small)
+@include vRegister(radius, $radius)
+@include vRegister(radius-large, $radius-large)
+@include vRegister(radius-rounded, $radius-rounded)
+@include vRegister(speed, $speed)
 
+// Flags
 $variable-columns: true !default
+$fullhd-enabled: true !default
+$widescreen-enabled: true !default
